# mathtutorbench

./: README.md  TINKER_SETUP.md  main.py  pyproject.toml  requirements.txt  spotcheck_mistake_correction.py  test_latency.py
configs/: pedagogy_following.yaml  pedagogy_following_hard.yaml  scaffolding_generation.yaml  scaffolding_generation_hard.yaml  socratic_questioning.yaml
models/: completion_api.py
results/: checkpoint-kimi_k2_thinking_base_checkpoint-socratic_questioning.json  checkpoint-qwen3_8b_base_checkpoint-socratic_questioning.json  generations-000044-pedagogy_following.json  generations-000044-pedagogy_following_hard.json  generations-000044-scaffolding_generation_hard.json  generations-Qwen3-235B-A22B-Instruct-2507-pedagogy_following.json  generations-Qwen3-235B-A22B-Instruct-2507-pedagogy_following_hard.json  generations-Qwen3-235B-A22B-Instruct-2507-scaffolding_generation.json  generations-Qwen3-235B-A22B-Instruct-2507-scaffolding_generation_hard.json  generations-Qwen3-4B-Instruct-2507-pedagogy_following.json  generations-Qwen3-4B-Instruct-2507-pedagogy_following_hard.json  generations-Qwen3-4B-Instruct-2507-scaffolding_generation.json  generations-Qwen3-4B-Instruct-2507-scaffolding_generation_hard.json  generations-Qwen3-8B-pedagogy_following_hard.json  generations-Qwen3-8B-scaffolding_generation_hard.json  generations-final-pedagogy_following.json  generations-final-pedagogy_following_hard.json  generations-final-scaffolding_generation.json  generations-final-scaffolding_generation_hard.json  results-000044.yaml  results-Qwen3-4B-Instruct-2507.yaml  (+6 more)
(+2 files in other folders)
