[project]
name = "mathtutorbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.1.0",
    "google-generativeai==0.8.3",
    "jinja2==3.1.5",
    "matplotlib==3.10.0",
    "openai==1.59.6",
    "sacrebleu==2.5.1",
    "scikit-learn==1.6.1",
    "tenacity==9.0.0",
    "torch==2.3.1",
    "tqdm==4.67.1",
    "transformers==4.48.2",
]
